--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "moment": "^2.29.1",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "sass": "^1.35.1",
     "socket.io-client": "^4.1.2",
     "web-vitals": "^1.1.2"
