--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
+    "crypto-js": "^4.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.3.0",
