--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "moment": "^2.29.1",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
+    "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
+    "react-textarea-autosize": "^8.3.3",
     "sass": "^1.35.1",
     "socket.io-client": "^4.1.2",
     "web-vitals": "^1.1.2"
