--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.13.1",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.9",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
