--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "react-textarea-autosize": "^8.3.3",
+    "react-toastify": "^7.0.4",
     "sass": "^1.35.1",
     "socket.io-client": "^4.1.2",
     "web-vitals": "^1.1.2"
