--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "moment": "^2.29.1",
     "qrcode.react": "^1.0.1",
+    "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
