--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-toastify": "^7.0.4",
     "sass": "^1.35.1",
     "socket.io-client": "^4.1.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
