--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-google-login": "^5.2.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-share": "^4.4.0",
     "react-textarea-autosize": "^8.3.3",
     "react-toastify": "^7.0.4",
