--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "qrcode.react": "^1.0.1",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
